fixed spacing title projects for mobile

--- a/style.css
+++ b/style.css
@@ -534,7 +534,7 @@ margin-top: 15vh;
   }
   .project-wrapper__text-title {
     color: grey;
-    margin-top: 5vh;
+    margin-top: 10vh;
   }
   .projects-wrapper__inline_position{
     width: 100vw;
